[package]
name = "day05_if_you_give_a_seed_a_fertilizer_part2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
day05_if_you_give_a_seed_a_fertilizer_common = { path = "../day05_if_you_give_a_seed_a_fertilizer_common" }
